--- a/src/BlazorNetCoreConf/BlazorNetCoreConf.Core/BlazorNetCoreConf.Core.csproj
+++ b/src/BlazorNetCoreConf/BlazorNetCoreConf.Core/BlazorNetCoreConf.Core.csproj
@@ -11,6 +11,7 @@
     <PackageReference Include="Microsoft.AspNetCore.Components.Authorization" Version="3.0.0" />
     <PackageReference Include="Microsoft.AspNetCore.Components.Web" Version="3.0.0" />
     <PackageReference Include="Microsoft.EntityFrameworkCore" Version="3.0.0" />
+    <PackageReference Include="Microsoft.EntityFrameworkCore.SqlServer" Version="3.0.0" />
   </ItemGroup>
 
 </Project>
